Fixes z-index issues

--- a/app/css/globals.css
+++ b/app/css/globals.css
@@ -28,6 +28,7 @@
   }
 
   #myVideo {
+    background-color: #212936;
     position: fixed;
     right: 0;
     bottom: 0;
